fix: persistence layer works!
- changed all drivers;
- added .jsp files from old project;
- fixed persistence entities relationships;
- removed favoritos from usuario;
- removed manual id creation at UsuarioController.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>PesquisarUsuarioController</servlet-name>
         <servlet-class>com.debron.mocs.controller.PesquisarUsuarioController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManterEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterEstabelecimentoController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>TratamentoExcecao</servlet-name>
         <url-pattern>/TratamentoExcecao</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>PesquisarUsuarioController</servlet-name>
         <url-pattern>/PesquisarUsuarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterEstabelecimentoController</servlet-name>
+        <url-pattern>/ManterEstabelecimentoController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
