chore: security update
- added utils classes;
- changed numeric IDs to UUID v4;
- added password cryptography.

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>itextpdf</artifactId>
             <version>5.5.13.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
