--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <display-name>MOX</display-name>
+    <display-name>MOCS</display-name>
     <welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
@@ -59,6 +59,14 @@
     </servlet-mapping>
     <error-page>
       <error-code>404</error-code>
+      <location>/Error</location>
+    </error-page>
+    <error-page>
+      <error-code>500</error-code>
+      <location>/Error</location>
+    </error-page>
+    <error-page>
+      <error-code>400</error-code>
       <location>/Error</location>
     </error-page>
     <error-page>
