--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,25 @@
     <welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
+    <servlet>
+        <servlet-name>ListaEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaEstabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisarEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.PesquisarEstabelecimentoController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ListaUsuarioController</servlet-name>
         <url-pattern>/ListaUsuarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaEstabelecimentoController</servlet-name>
+        <url-pattern>/ListaEstabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisarEstabelecimentoController</servlet-name>
+        <url-pattern>/PesquisarEstabelecimentoController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -58,23 +74,23 @@
         <url-pattern>/SessionController</url-pattern>
     </servlet-mapping>
     <error-page>
-      <error-code>404</error-code>
-      <location>/Error</location>
+        <error-code>404</error-code>
+        <location>/Error</location>
     </error-page>
     <error-page>
-      <error-code>500</error-code>
-      <location>/Error</location>
+        <error-code>500</error-code>
+        <location>/Error</location>
     </error-page>
     <error-page>
-      <error-code>400</error-code>
-      <location>/Error</location>
+        <error-code>400</error-code>
+        <location>/Error</location>
     </error-page>
     <error-page>
-      <exception-type>java.lang.Exception</exception-type>
-      <location>/Error</location>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/Error</location>
     </error-page>
     <error-page>
-      <exception-type>javax.servlet.ServletException</exception-type>
-      <location>/Error</location>
+        <exception-type>javax.servlet.ServletException</exception-type>
+        <location>/Error</location>
     </error-page>
 </web-app>
