midnight code bunddle - 1st
- Improved sessions, security and navigation;
- Finished 'Estabelecimento' Controllers

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,156 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-  <display-name>MOCS</display-name>
-  <welcome-file-list>
-    <welcome-file>SessionController</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>ListaEstabelecimentoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaEstabelecimentoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>PesquisarEstabelecimentoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.PesquisarEstabelecimentoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ListaFuncionarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaFuncionarioController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>PesquisarFuncionarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.PesquisarFuncionarioController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ManterFuncionarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ManterFuncionarioController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ListaFuncionarioPestabelecimentoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaFuncionarioPestabelecimentoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ListaPratoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaPratoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ListaPratoPestabelecimentoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaPratoPestabelecimentoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>PesquisarPratoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.PesquisarPratoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ManterPratoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ManterPratoController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ListaUsuarioController</servlet-name>
-    <url-pattern>/ListaUsuarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ListaEstabelecimentoController</servlet-name>
-    <url-pattern>/ListaEstabelecimentoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>PesquisarEstabelecimentoController</servlet-name>
-    <url-pattern>/PesquisarEstabelecimentoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ListaFuncionarioController</servlet-name>
-    <url-pattern>/ListaFuncionarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>PesquisarFuncionarioController</servlet-name>
-    <url-pattern>/PesquisarFuncionarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ManterFuncionarioController</servlet-name>
-    <url-pattern>/ManterFuncionarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ListaFuncionarioPestabelecimentoController</servlet-name>
-    <url-pattern>/ListaFuncionarioPestabelecimentoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ListaPratoController</servlet-name>
-    <url-pattern>/ListaPratoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ListaPratoPestabelecimentoController</servlet-name>
-    <url-pattern>/ListaPratoPestabelecimentoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>PesquisarPratoController</servlet-name>
-    <url-pattern>/PesquisarPratoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ManterPratoController</servlet-name>
-    <url-pattern>/ManterPratoController</url-pattern>
-  </servlet-mapping>
-  <session-config>
-    <session-timeout>
+    <display-name>MOCS</display-name>
+    <welcome-file-list>
+        <welcome-file>SessionController</welcome-file>
+    </welcome-file-list>
+    <servlet>
+        <servlet-name>ListaEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaEstabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisarEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.PesquisarEstabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListaFuncionarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaFuncionarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisarFuncionarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.PesquisarFuncionarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManterFuncionarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterFuncionarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListaFuncionarioPestabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaFuncionarioPestabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListaPratoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaPratoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListaPratoPestabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaPratoPestabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisarPratoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.PesquisarPratoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManterPratoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterPratoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManterEnderecoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterEnderecoController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ListaUsuarioController</servlet-name>
+        <url-pattern>/ListaUsuarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaEstabelecimentoController</servlet-name>
+        <url-pattern>/ListaEstabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisarEstabelecimentoController</servlet-name>
+        <url-pattern>/PesquisarEstabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaFuncionarioController</servlet-name>
+        <url-pattern>/ListaFuncionarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisarFuncionarioController</servlet-name>
+        <url-pattern>/PesquisarFuncionarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterFuncionarioController</servlet-name>
+        <url-pattern>/ManterFuncionarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaFuncionarioPestabelecimentoController</servlet-name>
+        <url-pattern>/ListaFuncionarioPestabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaPratoController</servlet-name>
+        <url-pattern>/ListaPratoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaPratoPestabelecimentoController</servlet-name>
+        <url-pattern>/ListaPratoPestabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisarPratoController</servlet-name>
+        <url-pattern>/PesquisarPratoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterPratoController</servlet-name>
+        <url-pattern>/ManterPratoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterEnderecoController</servlet-name>
+        <url-pattern>/ManterEnderecoController</url-pattern>
+    </servlet-mapping>
+    <session-config>
+        <session-timeout>
       30
     </session-timeout>
-  </session-config>
-  <servlet>
-    <servlet-name>TratamentoExcecao</servlet-name>
-    <servlet-class>com.debron.mocs.exception.TratamentoExcecao</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ManterUsuarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ManterUsuarioController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>PesquisarUsuarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.PesquisarUsuarioController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ManterEstabelecimentoController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ManterEstabelecimentoController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>SessionController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.SessionController</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ListaUsuarioController</servlet-name>
-    <servlet-class>com.debron.mocs.controller.ListaUsuarioController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TratamentoExcecao</servlet-name>
-    <url-pattern>/Error</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ManterUsuarioController</servlet-name>
-    <url-pattern>/ManterUsuarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>PesquisarUsuarioController</servlet-name>
-    <url-pattern>/PesquisarUsuarioController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ManterEstabelecimentoController</servlet-name>
-    <url-pattern>/ManterEstabelecimentoController</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>SessionController</servlet-name>
-    <url-pattern>/SessionController</url-pattern>
-  </servlet-mapping>
-  <error-page>
-    <error-code>404</error-code>
-    <location>/Error</location>
-  </error-page>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/Error</location>
-  </error-page>
-  <error-page>
-    <error-code>400</error-code>
-    <location>/Error</location>
-  </error-page>
-  <error-page>
-    <exception-type>java.lang.Throwable</exception-type>
-    <location>/Error</location>
-  </error-page>
+    </session-config>
+    <servlet>
+        <servlet-name>TratamentoExcecao</servlet-name>
+        <servlet-class>com.debron.mocs.exception.TratamentoExcecao</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManterUsuarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterUsuarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisarUsuarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.PesquisarUsuarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManterEstabelecimentoController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ManterEstabelecimentoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SessionController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.SessionController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListaUsuarioController</servlet-name>
+        <servlet-class>com.debron.mocs.controller.ListaUsuarioController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TratamentoExcecao</servlet-name>
+        <url-pattern>/Error</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterUsuarioController</servlet-name>
+        <url-pattern>/ManterUsuarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisarUsuarioController</servlet-name>
+        <url-pattern>/PesquisarUsuarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManterEstabelecimentoController</servlet-name>
+        <url-pattern>/ManterEstabelecimentoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SessionController</servlet-name>
+        <url-pattern>/SessionController</url-pattern>
+    </servlet-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/Error</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/Error</location>
+    </error-page>
+    <error-page>
+        <error-code>400</error-code>
+        <location>/Error</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/Error</location>
+    </error-page>
+    <welcome-file/>
 </web-app>
